--- a/src/submitted.html
+++ b/src/submitted.html
@@ -21,7 +21,7 @@
         <script>
             themeHandle()
         </script>
-        <h1 style="color: #FFB600">Submitted!</h1>
+        <h1 style="color: #FFB600">Submitted!</h1><br>
         <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
     </body>
 </html>
