--- a/src/notes.html
+++ b/src/notes.html
@@ -46,7 +46,8 @@
                     <select name="event" id="eventCode">
                         <option value="CADA">CADA - Sacramento Regional</option>
                         <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                        <option value="WOOD" selected>WOOD - CalGames</option>
+                        <option value="WOOD">WOOD - CalGames</option>
+                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
                     </select><br><br>
                     <label id="teamNumLabel"><br><br>Team Number: </label><br>
                     <input type="tel" id="teamNumber">
