--- a/src/manage.html
+++ b/src/manage.html
@@ -47,7 +47,7 @@
                         <option value="main">main</option>
                         <option value="pit">pit</option>
                     </select><br>
-                    <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick="getData()" id="viewData">View Data</button><br>
+                    <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" onclick="getData()" id="viewData">View Data</button><br>
                     <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
                 </fieldset>
             </form>
