--- a/src/pit.html
+++ b/src/pit.html
@@ -94,7 +94,7 @@
             </fieldset>
             <br>
             <p style="text-align:center">
-                <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">Submit</button><br>
+                <button type="submit" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;">Submit</button><br>
                 <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </p>
         </form>
