--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -49,7 +49,7 @@
                                 <option value="CCCC" selected>CCCC - Capital City Classic</option>
                             </select>
                         </fieldset>
-                        <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick="searchImg()" id="searchBtn">Search</button><br>
+                        <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" onclick="searchImg()" id="searchBtn">Search</button><br>
                         <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
                     </fieldset>
                     <!--/search sect-->
@@ -65,7 +65,7 @@
                         <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
                     </fieldset>
                     <!--/results sect-->
-                    <small style="text-align: center;">To see match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
+                    <small style="text-align: center;">To see match scouting data, go <a href="browse" style="all: unset; color: var(--gameFlairColor);">here</a></small>
             </form>
             <br><br>
         </div>
