--- a/src/scouts.html
+++ b/src/scouts.html
@@ -44,7 +44,7 @@
                         </table>
                     </fieldset>
                     <!--buttons-->
-                    <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                    <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
                     <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
                 </fieldset>
                 <br><br>
