--- a/src/teams.html
+++ b/src/teams.html
@@ -49,7 +49,7 @@
                         <option value="12">top row cone weight</option>
                     </select>
                 </fieldset>
-                <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
+                <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </form>
             <br><br>
