fix my button mess

--- a/src/main.html
+++ b/src/main.html
@@ -150,8 +150,8 @@
             </fieldset>
             <br>
             <p style="text-align:center">
-                <button type="submit" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="submitButton">Submit</button><br>
-                <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button><br><br>
+                <button type="submit" class="uiButton actionButton" id="submitButton">Submit</button><br>
+                <button type="button" class="uiButton cancelButton" onclick="goToHome()">Back</button><br><br>
             </p>
         </form>
         <script src="js/main_form_client.min.js" type="text/javascript"></script>
