--- a/src/pit.html
+++ b/src/pit.html
@@ -94,8 +94,8 @@
             </fieldset>
             <br>
             <p style="text-align:center">
-                <button type="submit" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;">Submit</button><br>
-                <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                <button type="submit" class="uiButton actionButton">Submit</button><br>
+                <button type="button" class="uiButton cancelButton" onclick="goToHome()">Back</button>
             </p>
         </form>
         <br><br>
