--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -33,8 +33,8 @@
                         <option value="CCCC" selected>CCCC - Capital City Classic</option>
                     </select>
                 </fieldset>
-                <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                <button type="button" class="uiButton actionButton" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </form>
             <br><br>
         </div>
