--- a/src/manage.html
+++ b/src/manage.html
@@ -47,8 +47,8 @@
                         <option value="main">main</option>
                         <option value="pit">pit</option>
                     </select><br>
-                    <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" onclick="getData()" id="viewData">View Data</button><br>
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
             </form>
             <br><br>
@@ -58,7 +58,7 @@
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset id="resultsInsert">
-                        <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="newSearch()">New Search</button><br><button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                        <button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <br><br>
             </div>
