--- a/src/notes.html
+++ b/src/notes.html
@@ -51,15 +51,15 @@
                     </select><br><br>
                     <label id="teamNumLabel"><br><br>Team Number: </label><br>
                     <input type="tel" id="teamNumber">
-                    <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="viewNoteButton" onclick="getNote()">View</button><br>
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
+                    <button type="button" class="uiButton actionButton" id="viewNoteButton" onclick="getNote()">View</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()" type="button">Back</button>
                 </fieldset>
             </div>
         </div>
         <div id="edit" style="display: none;">
             <div id="editor" style="display: none;"></div>
-            <button type="button" style="color: #000; background-color: var(--gameFlairColor); border-radius: 0.5rem; border-style: solid; border-color: var(--gameFlairColor); border-width: 0.875rem; margin-top: 1rem;" id="saveNoteButton" onclick="saveNote()">Save</button><br>
-            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button></div>
+            <button type="button" class="uiButton actionButton" id="saveNoteButton" onclick="saveNote()">Save</button><br>
+            <button type="button" class="uiButton returnButton" onclick="goToHome()" type="button">Back</button></div>
         </div>
         <script src="https://cdn.quilljs.com/1.3.6/quill.js" integrity="sha384-0zm5QqnR2gL4GY5AwreU3xp5AEGWqkdbamrRLeXwWwepp4JqmPRawLJFD8Cm802W" crossorigin="anonymous"></script>
         <script src="js/notes_client.min.js" type="text/javascript"></script>
