reduce unused css

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
             </div>
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
                     <a href="pit" class="gameflair1" style="order: 2; margin-bottom: 5%;">pit scouting<br></a>
