--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
         </script>
         <div class="container">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h2>Log In</h2><br>
                 <button style="background-color: #5865F2; border: 2px solid #5865F2; color: #000; border-radius: 10px; padding: 10px; font-weight: 900; width: 75%;" onclick="window.location.href='loginDiscord'">
                 <div style="display: flex; flex-direction: row; align-items: center; text-align: center; flex-shrink: 1;">
