--- a/src/manage.html
+++ b/src/manage.html
@@ -39,7 +39,7 @@
         </script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset>
                     <label>Database: <br></label><br>
@@ -55,7 +55,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset id="resultsInsert">
                         <button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
