--- a/src/notes.html
+++ b/src/notes.html
@@ -39,7 +39,7 @@
         </script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
-                <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+                <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP</span></h1><br><br>
                 <h3>View & Edit Note</h3>
                 <fieldset id="searchContainer">
                     <label id="ecodeLabel">Event Code: <br></label>
