--- a/src/pit.html
+++ b/src/pit.html
@@ -22,7 +22,7 @@
             themeHandle()
         </script>
         <form action="/submitPit" target="_self" method="POST" enctype="multipart/form-data">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <input type="text" value="pit" name="formType" hidden>
             <br>
             <h2 class="gameflair1">General Info</h2>
