--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -31,7 +31,7 @@
         <div class="container" style="display: flex;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4 style="color: red; display: none">/h4>
                     <h4>Image Database</h4><br>
                     <!--search sect-->
