--- a/src/points.html
+++ b/src/points.html
@@ -36,7 +36,7 @@
         </script>
         <div class="container">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <div style="display: flex; flex-direction: column;">
                     <!--<a href="shop" class="gameflair1" style="margin-bottom: 5%;">Item Shop</a><br>-->
                     <!--<a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">blackjack</a><br>-->
