--- a/src/settings.html
+++ b/src/settings.html
@@ -24,7 +24,7 @@
         </script>
         <div class="container">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h2>Settings</h2><br>
                 <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()">
                     <p>Switch Theme</p>
