--- a/src/teams.html
+++ b/src/teams.html
@@ -23,7 +23,7 @@
         <div class="container" id="search" style="display: flex;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h3>Team Data</h3>
                 <fieldset>
                     <label>Event Code: </label><br>
@@ -57,7 +57,7 @@
         <div class="container" id="results" style="display: none;">
             <!--flex is shown-->
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4>
                 <fieldset>
                     <fieldset>
