--- a/src/main.html
+++ b/src/main.html
@@ -24,7 +24,7 @@
         </script>
         <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
                 <label>Event Code</label><br>
