--- a/src/matches.html
+++ b/src/matches.html
@@ -35,7 +35,7 @@
         </script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
-                <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+                <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP</span></h1><br><br>
                 <fieldset>
                     <label>Event Code: </label><br>
                     <select name="event" id="eventCode">
@@ -54,7 +54,7 @@
         <div class="container" id="results" style="display: none;">
             <!--flex is shown-->
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+                <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP</span></h1><br><br>
 
                 <!--buttons-->
                 <button class="uiButton actionButton" onclick='goToHome()'>Back</button><br>
