--- a/src/scouts.html
+++ b/src/scouts.html
@@ -23,7 +23,7 @@
         <div class="container" id="search" style="display: flex;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Scout Ranks</h4><br>
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </form>
@@ -32,7 +32,7 @@
         <div class="container" id="results" style="display: none;">
             <!--flex is shown-->
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <fieldset>
                     <fieldset>
                         <h3 id="eventCodeDisplay"></h3>
