--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -22,7 +22,7 @@
         <div class="container" id="search" style="display: flex;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Teams To Pit Scout</h4><br>
                 <fieldset>
                     <label id="eventLabel">Event Code: </label><br>
